welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:4: error: value avance is not a member of Unit
  droite()avance();droite()
          ^SnakeBuggle:13: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^SnakeBuggle:13: warning: enclosing method arriver has result type Unit: return value discarded
      return true
      ^SnakeBuggle:16: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^SnakeBuggle:16: warning: enclosing method arriver has result type Unit: return value discarded
      return false
      ^SnakeBuggle:21: error: value unary_! is not a member of Unit
  while(!arriver){
        ^